--- a/package.json
+++ b/package.json
@@ -25,14 +25,17 @@
     "@nestjs/throttler": "^6.4.0",
     "@prisma/client": "^6.11.1",
     "@types/bcrypt": "^5.0.2",
+    "@types/multer": "^2.0.0",
     "@types/passport-github2": "^1.2.9",
     "@types/passport-google-oauth20": "^2.0.16",
     "bcrypt": "^6.0.0",
     "cache-manager": "^7.0.1",
     "cache-manager-ioredis": "^2.1.0",
+    "cache-manager-ioredis-yet": "^2.1.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "ioredis": "^5.6.1",
+    "multer": "^2.0.1",
     "nestjs-throttler-storage-redis": "0.5.1",
     "passport": "^0.7.0",
     "passport-github2": "^0.1.12",
