--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -21,15 +21,15 @@ services:
       - postgres
       - redis
 
-  # nginx:
-  #   container_name: nginx-container
-  #   image: nginx:latest
-  #   ports:
-  #     - '80:80'
-  #     - '443:443'
-  #   volumes:
-  #     - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
-  #     - ./ssl:/etc/ssl
+  nginx:
+    container_name: nginx-container
+    image: nginx:latest
+    ports:
+      - '80:80'
+      - '443:443'
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./ssl:/etc/ssl
 
   postgres:
     image: postgres:17.5
