--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: to Server
+name: To Server
 
 on:
   push:
@@ -24,6 +24,6 @@ jobs:
             fi
             cd "$REPO_DIR"
             git pull origin main
-            sudo docker compose down
+            sudo docker compose -f docker-compose.prod.yml down
             sudo docker compose -f docker-compose.prod.yml up --build -d
           EOF
