--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "@types/multer": "^2.0.0",
     "@types/passport-github2": "^1.2.9",
     "@types/passport-google-oauth20": "^2.0.16",
+    "@types/passport-linkedin-oauth2": "^1.5.6",
+    "@types/passport-oauth2": "^1.8.0",
     "bcrypt": "^6.0.0",
     "cache-manager": "^7.0.1",
     "cache-manager-ioredis": "^2.1.0",
@@ -43,6 +45,8 @@
     "passport": "^0.7.0",
     "passport-github2": "^0.1.12",
     "passport-google-oauth20": "^2.0.0",
+    "passport-linkedin-oauth2": "^2.0.0",
+    "passport-oauth2": "^1.8.0",
     "prisma": "^6.11.1",
     "redis": "^5.6.0",
     "reflect-metadata": "^0.2.2",
