--- a/package.json
+++ b/package.json
@@ -28,17 +28,20 @@
     "@nestjs/throttler": "^6.4.0",
     "@prisma/client": "^6.11.1",
     "@types/bcrypt": "^5.0.2",
+    "@types/express-session": "^1.18.2",
     "@types/multer": "^2.0.0",
     "@types/passport-github2": "^1.2.9",
     "@types/passport-google-oauth20": "^2.0.16",
     "@types/passport-linkedin-oauth2": "^1.5.6",
     "@types/passport-oauth2": "^1.8.0",
+    "@types/passport-openidconnect": "^0.1.3",
     "bcrypt": "^6.0.0",
     "cache-manager": "^7.0.1",
     "cache-manager-ioredis": "^2.1.0",
     "cache-manager-ioredis-yet": "^2.1.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "express-session": "^1.18.2",
     "ioredis": "^5.6.1",
     "multer": "^2.0.1",
     "nestjs-throttler-storage-redis": "0.5.1",
@@ -47,6 +50,7 @@
     "passport-google-oauth20": "^2.0.0",
     "passport-linkedin-oauth2": "^2.0.0",
     "passport-oauth2": "^1.8.0",
+    "passport-openidconnect": "^0.1.2",
     "prisma": "^6.11.1",
     "redis": "^5.6.0",
     "reflect-metadata": "^0.2.2",
